# CryEngine-RTS-Game-1

./: .gitignore  Game.cryproject  README.md
Code/: CMakeLists.txt  GamePlugin.cpp  GamePlugin.h
Code/Actions/: IBaseAction.h
Code/Actions/Buildings/: BuildingBuildAction.cpp  BuildingBuildAction.h  BuildingSpawnZombiesAction.cpp  BuildingSpawnZombiesAction.h
Code/Actions/Train/: TrainEngineer1Action.cpp  TrainEngineer1Action.h  TrainSoldier1Action.cpp  TrainSoldier1Action.h
Code/Actions/Units/: AttackAction.cpp  AttackAction.h  MoveAction.cpp  MoveAction.h  UnitAttackAction.cpp  UnitAttackAction.h  UnitAttackEnemyBaseAction.cpp  UnitAttackEnemyBaseAction.h  UnitBuildAction.cpp  UnitBuildAction.h  UnitCollectResourceAction.cpp  UnitCollectResourceAction.h  UnitGuardInGuardPostAction.cpp  UnitGuardInGuardPostAction.h  UnitMoveAction.cpp  UnitMoveAction.h  UnitSendResourceToWarehouseAction.cpp  UnitSendResourceToWarehouseAction.h  UnitWanderingRandomlyAction.cpp  UnitWanderingRandomlyAction.h  UnitWorkInWorkplaceAction.cpp  UnitWorkInWorkplaceAction.h
Code/Components/: SpawnPoint.cpp  SpawnPoint.h
Code/Components/Action/: ActionManager.cpp  ActionManager.h
Code/Components/BaseBuilding/: BaseBuilding.cpp  BaseBuilding.h  Building.cpp  Building.h
Code/Components/BaseBuilding/Buildings/: AK47Factory1Building.cpp  AK47Factory1Building.h  Alchemy1Building.cpp  Alchemy1Building.h  Bakery1Building.cpp  Bakery1Building.h  Barracks1Building.cpp  Barracks1Building.h  BulletFactory1Building.cpp  BulletFactory1Building.h  Cave1Building.cpp  Cave1Building.h  Farm1Building.cpp  Farm1Building.h  GuardTower1Building.cpp  GuardTower1Building.h  GunPowderFactory1Building.cpp  GunPowderFactory1Building.h  HQ1Building.cpp  HQ1Building.h  House1Building.cpp  House1Building.h  Light1Building.cpp  Light1Building.h  Wall1Building.cpp  Wall1Building.h  Warehouse1Building.cpp  Warehouse1Building.h  Windmill1Building.cpp  Windmill1Building.h
Code/Components/Controller/: AIController.cpp  AIController.h
Code/Components/Effects/: BulletTracer.cpp  BulletTracer.h  FogOfWar.cpp  FogOfWar.h
Code/Components/Info/: OwnerInfo.cpp  OwnerInfo.h
Code/Components/Managers/: ActionManager.cpp  ActionManager.h  ResourceManager.cpp  ResourceManager.h  UnitStateManager.cpp  UnitStateManager.h  UnitTypeManager.cpp  UnitTypeManager.h  VisibilityManager.cpp  VisibilityManager.h
Code/Components/Player/: Player.cpp  Player.h
Code/Components/ResourcePoints/: BaseResourcePoint.cpp  BaseResourcePoint.h  ResourcePoint.cpp  ResourcePoint.h
Code/Components/ResourcePoints/Resource/: IronResourcePoint.cpp  IronResourcePoint.h  OilResourcePoint.cpp  OilResourcePoint.h  WoodResourcePoint.cpp  WoodResourcePoint.h
Code/Components/Resources/: Resource.cpp  Resource.h
Code/Components/Resources/Resource/: ResourceIron.cpp  ResourceIron.h  ResourceOil.cpp  ResourceOil.h  ResourceWood.cpp  ResourceWood.h
Code/Components/Selectables/: Attacker.cpp  Attacker.h  Cost.cpp  Cost.h  Engineer.cpp  Engineer.h  Guard.cpp  Guard.h  GuardPost.cpp  GuardPost.h  Health.cpp  Health.h  IUnit.cpp  IUnit.h  InfoPanelUIDetail.cpp  InfoPanelUIDetail.h  ResourceCollector.cpp  ResourceCollector.h  ResourceStorage.cpp  ResourceStorage.h  Selectable.cpp  Selectable.h  UnitAnimation.cpp  UnitAnimation.h  Visibility.cpp  Visibility.h  Worker.cpp  Worker.h  Workplace.cpp  Workplace.h
Code/Components/Selectables/Units/: BaseUnit.cpp  BaseUnit.h  Engineer1Unit.cpp  Engineer1Unit.h  Soldier1Unit.cpp  Soldier1Unit.h  Zombie1Unit.cpp  Zombie1Unit.h
Code/Components/Spawners/: SpawnPoint.cpp  ZombieSpawner.cpp  ZombieSpawner.h
Code/Components/UI/: Actionbar.cpp  Actionbar.h  SelectionBox.cpp  SelectionBox.h  UIActionbar.cpp  UIActionbar.h  UIDescriptionsPanel.cpp  UIDescriptionsPanel.h  UIHealthbars.cpp  UIHealthbars.h  UIInfoPanel.cpp  UIInfoPanel.h  UIResourcesPanel.cpp  UIResourcesPanel.h  UISelectionBox.cpp  UISelectionBox.h
Code/Components/UI/Listener/: UIElementEventListener.cpp  UIElementEventListener.h
Code/Components/Weapons/: BaseWeapon.cpp  BaseWeapon.h
Code/Interfaces/: IDescriptionProvider.h  IUIInfoPanelItem.h  IUIInfoPanelItemProvider.h
Code/Resources/: IResource.h  ResourceConstants.h
Code/Resources/Resources/: AK47Resource.cpp  AK47Resource.h  BreadResource.cpp  BreadResource.h  BulletResource.cpp  BulletResource.h  FlourResource.cpp  FlourResource.h  GunPowderResource.cpp  GunPowderResource.h  IronResource.cpp  IronResource.h  MoneyResource.cpp  MoneyResource.h  OilResource.cpp  OilResource.h  PopulationResource.cpp  PopulationResource.h  SulfurResource.cpp  SulfurResource.h  WheatResource.cpp  WheatResource.h  WoodResource.cpp  WoodResource.h
Code/UIItems/: IBaseUIItem.h
Code/UIItems/DescriptionPanel/: BaseDescriptionPanelItem.cpp  BaseDescriptionPanelItem.h
Code/UIItems/InfoPanel/: IBaseInfoPanelUIItem.h
Code/UIItems/InfoPanel/Items/: UIActionInfoPanelItem.cpp  UIActionInfoPanelItem.h  UIBuildingActionInfoPanelItem.cpp  UIBuildingActionInfoPanelItem.h  UIUnitInfoPanelItem.cpp  UIUnitInfoPanelItem.h
Code/UIItems/Items/: UICancelItem.cpp  UICancelItem.h  UIChangeStanceItem.cpp  UIChangeStanceItem.h
Code/UIItems/Items/Buildings/: UIAK47Factory1BuildItem.cpp  UIAK47Factory1BuildItem.h  UIAlchemy1BuildItem.cpp  UIAlchemy1BuildItem.h  UIBakery1BuildItem.cpp  UIBakery1BuildItem.h  UIBarracks1BuildItem.cpp  UIBarracks1BuildItem.h  UIBulletFactory1BuildItem.cpp  UIBulletFactory1BuildItem.h  UICave1BuildItem.cpp  UICave1BuildItem.h  UIFarm1BuildItem.cpp  UIFarm1BuildItem.h  UIGuardTower1BuildItem.cpp  UIGuardTower1BuildItem.h  UIGunPowderFactory1BuildItem.cpp  UIGunPowderFactory1BuildItem.h  UIHQ1BuildItem.cpp  UIHQ1BuildItem.h  UIHouse1BuildItem.cpp  UIHouse1BuildItem.h  UILight1BuildItem.cpp  UILight1BuildItem.h  UIWall1BuildItem.cpp  UIWall1BuildItem.h  UIWarehouse1BuildItem.cpp  UIWarehouse1BuildItem.h  UIWindmillBuildItem.cpp  UIWindmillBuildItem.h
Code/UIItems/Items/Resources/: UIBuyBreadItem.cpp  (+27 more)
Code/Utils/: EntityUtils.cpp  EntityUtils.h  MathUtils.cpp  MathUtils.h  MouseUtils.cpp  MouseUtils.h
(+20 files in other folders)
